--- a/Proyecto_AAA/index.html
+++ b/Proyecto_AAA/index.html
@@ -126,16 +126,16 @@
       <section id="sponsors-section">
         <div class="sponsors-grid">
           <figure>
-            <img srcset="image/sponsor/sponsor1.WebP" alt="sponsor1" loading="lazy" />
+            <img srcset="image/sponsor/sponsor1.WebP" alt="sponsor1" />
           </figure>
           <figure>
-            <img srcset="image/sponsor/sponsor2.WebP" alt="sponsor2" loading="lazy"/>
+            <img srcset="image/sponsor/sponsor2.WebP" alt="sponsor2" />
           </figure>
           <figure>
-            <img srcset="image/sponsor/sponsor3.WebP" alt="sponsor3" loading="lazy"/>
+            <img srcset="image/sponsor/sponsor3.WebP" alt="sponsor3" />
           </figure>
           <figure>
-            <img srcset="image/sponsor/sponsor4.WebP" alt="sponsor4" loading="lazy"/>
+            <img srcset="image/sponsor/sponsor4.WebP" alt="sponsor4" />
           </figure>
         </div>
       </section>
@@ -162,7 +162,6 @@
             <img
               srcset="image/personavr.WebP"
               alt="Persona con casco de realidad virtual"
-              loading="lazy"
             />
           </div>
         </div>
@@ -209,24 +208,22 @@
             <img
               srcset="image/dbrand/image1.WebP"
               alt="SEO Project Management Tool"
-              loading="lazy"
-              loading="lazy"
             />
             <h1>Marketing</h1>
             <h2>Marketing: SEO Project Management Tool</h2>
           </article>
           <article class="project" aria-label="project2">
-            <img srcset="image/dbrand/image2.WebP" alt="Desktop Sign Up Flow" loading="lazy" />
+            <img srcset="image/dbrand/image2.WebP" alt="Desktop Sign Up Flow" />
             <h1>UI Design</h1>
             <h2>UI Design: Desktop Sign Up Flow</h2>
           </article>
           <article class="project" aria-label="project3">
-            <img srcset="image/dbrand/image3.WebP" alt="Developers Working Hard" loading="lazy" />
+            <img srcset="image/dbrand/image3.WebP" alt="Developers Working Hard" />
             <h1>UI Design</h1>
             <h2>UI Design: Developers Working Hard</h2>
           </article>
           <article class="project" aria-label="project4">
-            <img srcset="image/dbrand/image4.WebP" alt="CoinView Crypto App" loading="lazy"/>
+            <img srcset="image/dbrand/image4.WebP" alt="CoinView Crypto App" />
             <h1>Application</h1>
             <h2>Application: CoinView Crypto App</h2>
           </article>
@@ -250,7 +247,6 @@
                 srcset="image/insights/image1.WebP"
                 alt="Author Image"
                 class="author-img"
-                loading="lazy"
               />
               <p>Thomas Smith</p>
             </div>
@@ -262,7 +258,6 @@
                 srcset="image/insights/image2.WebP"
                 alt="Author Image"
                 class="author-img"
-                loading="lazy"
               />
               <p>Stella Smith</p>
             </div>
@@ -276,7 +271,6 @@
                 srcset="image/insights/image3.WebP"
                 alt="Author Image"
                 class="author-img"
-                loading="lazy"
               />
               <p>Monica Smith</p>
             </div>
@@ -288,7 +282,6 @@
                 srcset="image/insights/image4.WebP"
                 alt="Author Image"
                 class="author-img"
-                loading="lazy"
               />
               <p>Ernest Smith</p>
             </div>
@@ -301,7 +294,7 @@
     <footer>
       <div class="footer-container">
         <div class="footer-logo">
-          <img srcset="image/logo.WebP" alt="Logo" loading="lazy"/>
+          <img srcset="image/logo.WebP" alt="Logo" />
           <p>
             We are a creative studio founded in NYC. We build brands & digital
             experiences.
